# xmoltoppm

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  traj.xyz  xmoltoppm_demo.ipynb
.github/workflows/: publish.yml  tests.yml
docs/: README.md  guide.md
scripts/: generate_review_outputs.sh  run_ship_verification.py
tests/: __init__.py  test_features.py  test_render_golden.py  test_xyz_reader.py
tests/fixtures/: gf_config.txt  graphics_data.txt  minimal.xyz  overlay_frame.txt  plane_filter.xyz  sample_config.json
xmoltoppm/: __init__.py  config_loader.py
xmoltoppm/cli/: __init__.py  main.py
xmoltoppm/core/: __init__.py  elements.py  frame.py  options.py
xmoltoppm/io/: __init__.py  ppm_writer.py  xyz_reader.py
xmoltoppm/viz/: __init__.py  render.py
